tests/fixtures/valid/types/udt_basic.pine
//@version=6
indicator("UDT")
type Pivot
    int x
    float y
p = Pivot.new(bar_index, close)
plot(p.y)
