tests/fixtures/invalid/syntax/braced_type_block.pine
//@version=6
indicator("x")
type X { int a }
